--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@import 'variables.module';
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -9,6 +11,12 @@
   --header-background: 9, 24, 51;
   --header-foreground: 255, 255, 255;
   --footer-foreground: 39, 41, 50;
+  --pale-silver: #d1c5c0;
+  --purple: #711c91;
+  --steel-pink: #cb1dcd;
+  --raisin-black: #272932;
+  --primary-font-color: white;
+  --secondary-font-color: var(--raisin-black);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,6 +26,8 @@
     --background-end-rgb: 9, 24, 51;
     --header-background: 209, 197, 192;
     --header-foreground: 39, 41, 50;
+    --primary-font-color: var(--raisin-black);
+    --secondary-font-color: white;
   }
 }
 
@@ -51,9 +61,9 @@ footer {
 }
 
 h2 {
-  text-shadow: -4px 4px 0px rgba(113,28,145,1);
+  text-shadow: -4px 4px 0px var(--purple);
 }
 
 span.highlight {
-  color: rgb(203, 29, 205);
+  color: var(--steel-pink);
 }
