--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -3,6 +3,7 @@ $purple: #711c91;
 $steel-pink: #cb1dcd;
 $raisin-black: #272932;
 $primary-color: #091833;
+$primary-color-800: #133E7C;
 
 $radii-xs: 0.125rem;
 $radii-sm: 0.25rem;
