--- a/src/app/components/atoms/button/style.scss
+++ b/src/app/components/atoms/button/style.scss
@@ -1,22 +1,46 @@
 @import 'variables.module';
 
-.text-button {
+@mixin baseButton {
   display: inline-flex;
   align-items: center;
   justify-content: center;
   gap: .25rem;
-  color: $secondaryFontColor;
   border: none;
   padding: 10px 20px;
   border-radius: $radii-md;
   cursor: pointer;
   font-size: 1.2rem;
   font-weight: 600;
-  transition: box-shadow .3s, background .3s;
+}
+
+.text-button {
+  @include baseButton;
+  color: $secondaryFontColor;
   background: transparent;
+  transition: box-shadow .3s, background .3s;
   &:not(:disabled):hover {
     box-shadow: -8px 8px 0 0 rgba($steel-pink, 1);
     background: rgba($steel-pink, .2);
+  }
+  &:not(:disabled):active {
+    box-shadow: none;
+    background: rgba($steel-pink, .5);
+  }
+  &:disabled {
+    background: rgba($raisin-black, .2);
+    color: rgba(#000, .5);
+    cursor: not-allowed;
+  }
+}
+
+.flat-button {
+  @include baseButton;
+  color: $secondaryFontColor;
+  background: $steel-pink;
+  transition: box-shadow .3s, background .3s;
+  &:not(:disabled):hover {
+    box-shadow: -8px 8px 0 0 rgba($steel-pink, 1);
+    background: rgba($steel-pink, .4);
   }
   &:not(:disabled):active {
     box-shadow: none;
