--- a/src/styles/variables.module.scss
+++ b/src/styles/variables.module.scss
@@ -11,6 +11,10 @@ $radii-md: 0.5rem;
 $radii-lg: 0.75rem;
 $radii-xl: 1rem;
 
+$dark-blue-base: #091833;
+$purple-base: #711C91B2;
+$pink-base: #cb1dcd;
+
 $primaryFontColor: $raisin-black;
 $secondaryFontColor: white;
 
