--- a/src/app/components/button/style.scss
+++ b/src/app/components/button/style.scss
@@ -1,3 +1,4 @@
+@use 'sass:color';
 @import 'variables.module';
 
 @mixin baseButton {
@@ -24,7 +25,7 @@
   }
   &:not(:disabled):active {
     box-shadow: none;
-    background: rgba($steel-pink, .5);
+    background-color: var(--secondary-color-light);
   }
   &:disabled {
     background: rgba($raisin-black, .2);
